#488 - Fix text alignment for transcription header

--- a/sitemedia/scss/components/_iiif.scss
+++ b/sitemedia/scss/components/_iiif.scss
@@ -76,8 +76,10 @@
         h1,
         h2 {
             @include typography.headline-3;
-            text-align: left;
             direction: ltr;
+        }
+        h1 {
+            text-align: left;
         }
         li {
             & + li {
